# anima

./: .gitignore  pyproject.toml  update.sh
anima/: absorb.py  birth.py  blueprint.py  brain.py  budget.py  cli.py  constraints.py  diary.py  emotions.py  inner_world.py  reflection.py  self_model.py  senses.py  soul.py  thought_engine.py  voice.py  web.py
