[project]
name = "anima"
version = "0.1.0"
description = "A sovereign AI agent that thinks, feels, and lives"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
cloud = ["anthropic>=0.52.0"]
all = ["anthropic>=0.52.0"]

[project.scripts]
anima = "anima.cli:main"
anima-web = "anima.web:run_web"
